welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:3: error: '<-' expected but ';' found.
	for(i; 1 to 4) {
             ^PictureMono:3: error: '<-' expected but ')' found.
	for(i; 1 to 4) {
                     ^PictureMono:6: error: illegal start of simple expression
}
^